docs: ✏️ moved tutorial and doc here from github wiki page

--- a/docs/_layouts/api.html
+++ b/docs/_layouts/api.html
@@ -1,7 +1,7 @@
 {% include header.html %}
 <div class="container">
-	<div id="doc" class="is-flex">
-		<div>
+	<div class="is-flex is-documentation">
+		<div class="doc-aside">
 			<div class="field">
 				<p class="control has-icons-left">
 					<input id="search" class="input" type="text" placeholder="Search...">
@@ -39,7 +39,6 @@
 					{% endfor %}
 				</ul>
 				{% endfor %}
-				</ul>
 			</aside>
 		</div>
 		<div class="content">
