--- a/docs/css/style.scss
+++ b/docs/css/style.scss
@@ -4,13 +4,19 @@
 @import "custom-bulma";
 @import "rouge-github";
 
-#doc {
+.is-documentation {
   &>div:first-child {
     flex-shrink: 0;
     margin-bottom: 1.5rem;
     margin-right: 1rem;
     padding-right: 0.5rem;
   }
+}
+
+.doc-aside {
+  position: sticky;
+  top: 20px;
+  width: 320px;
 }
 
 #features {
@@ -92,4 +98,8 @@
 .is-limited-width {
   margin: 0 auto;
   max-width: 64rem;
+}
+
+.highlighter-rouge {
+  margin-bottom: 1rem;
 }
