docs: ✏️ added Get Started documentation page

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -9,7 +9,7 @@
     <link rel="stylesheet" href="{{ '/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
   <body>
-    <div id="hero is-fullheight">
+    <div>
       <div class="hero-head">
           <nav class="navbar">
             <div class="container">
