--- a/docs/css/style.scss
+++ b/docs/css/style.scss
@@ -103,3 +103,11 @@
 .highlighter-rouge {
   margin-bottom: 1rem;
 }
+
+.hero-body {
+  padding: 2rem 1.5rem;
+}
+
+.menu-label {
+  font-weight: bold;
+}
