--- a/docs/_sass/custom-bulma.scss
+++ b/docs/_sass/custom-bulma.scss
@@ -1,15 +1,18 @@
 @charset "utf-8";
 
 $red: #de0304;
+$dark: #202020;
 
+$body-color: $dark;
 $footer-background-color: hsl(0, 0%, 100%);
 $link: $red;
-$menu-item-active-background-color: $red;
 $navbar-item-active-color: $red;
 $primary: $red;
 
-@import "bulma";
+$menu-label-color: $dark !default
+$menu-item-active-background-color: $red;
+$menu-label-letter-spacing: 0.05em;
 
-.hero-body {
-  padding: 2rem 1.5rem;
-}
+$content-heading-weight: 700;
+
+@import "bulma";
