docs: ✏️ fixed getting started link to the tutorial

--- a/docs/css/style.scss
+++ b/docs/css/style.scss
@@ -111,3 +111,13 @@
 .menu-label {
   font-weight: bold;
 }
+
+a {
+  text-decoration: underline;
+}
+
+a.button,
+.navbar a,
+.menu-list a {
+  text-decoration: none;
+}
