--- a/docs/_sass/custom-bulma.scss
+++ b/docs/_sass/custom-bulma.scss
@@ -14,5 +14,6 @@ $menu-item-active-background-color: $red;
 $menu-label-letter-spacing: 0.05em;
 
 $content-heading-weight: 700;
+$fullhd-enabled: false;
 
 @import "bulma";
