--- a/docs/_layouts/api.html
+++ b/docs/_layouts/api.html
@@ -1,45 +1,48 @@
 {% include header.html %}
 <div class="container">
 	<div class="is-flex is-documentation">
-		<div class="doc-aside">
-			<div class="field">
-				<p class="control has-icons-left">
-					<input id="search" class="input" type="text" placeholder="Search...">
-					<span class="icon is-small is-left">
-					<i class="fas fa-search"></i>
-				</span>
-				</p>
-			</div>
-			<aside id="results" class="menu is-hidden">
-				<div class="level">
-					<div class="level-left">
-						<div class="level-item">
-							Results found:&nbsp;<span id="results-count" class="has-text-weight-bold">0</span>
-						</div>
-					</div>
-					<div class="level-right">
-						<div class="level-item">
-							<button id="results-close" class="delete"></button>
-						</div>
-					</div>
+		<div class="doc-aside-wrapper">
+			<div class="doc-aside">
+				<div class="field">
+					<p class="control has-icons-left">
+						<input id="search" class="input" type="text" placeholder="Search...">
+						<span class="icon is-small is-left">
+							<i class="fas fa-search"></i>
+						</span>
+					</p>
 				</div>
-				<ul id="results-list" class="menu-list"></ul>
-			</aside>
-			<aside id="doc-menu" class="menu">
-				{% for category in site.categories %}
-				<p class="menu-label">{{ category | first }}</p>
-				<ul class="menu-list">
-					{% assign sorted_posts = category[1] | sort: 'title' %}
-					{% for post in sorted_posts %}
-					{% if post.url %}
-					<li>
-						<a href="{{ post.url | relative_url }}"{% if post.url == page.url %}class="is-active"{% endif %}>{{ post.title }}</a>
-					</li>
-					{% endif %}
+				<aside id="results" class="menu is-hidden">
+					<div class="level">
+						<div class="level-left">
+							<div class="level-item">
+								Results found:&nbsp;<span id="results-count" class="has-text-weight-bold">0</span>
+							</div>
+						</div>
+						<div class="level-right">
+							<div class="level-item">
+								<button id="results-close" class="delete"></button>
+							</div>
+						</div>
+					</div>
+					<ul id="results-list" class="menu-list"></ul>
+				</aside>
+				<aside id="doc-menu" class="menu">
+					{% for category in site.categories %}
+					<p class="menu-label">{{ category | first }}</p>
+					<ul class="menu-list">
+						{% assign sorted_posts = category[1] | sort: 'title' %}
+						{% for post in sorted_posts %}
+						{% if post.url %}
+						<li>
+							<a href="{{ post.url | relative_url }}" {% if post.url== page.url %}class="is-active" {%
+							   endif %}>{{ post.title }}</a>
+						</li>
+						{% endif %}
+						{% endfor %}
+					</ul>
 					{% endfor %}
-				</ul>
-				{% endfor %}
-			</aside>
+				</aside>
+			</div>
 		</div>
 		<div class="content">
 			{{ content }}
