--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -1,7 +1,7 @@
 {% include header.html %}
 <div class="container">
 	<div class="is-flex is-documentation">
-		<div>
+		<div class="doc-aside-wrapper">
 			<aside class="doc-aside menu">
 				<p class="menu-label">Documentation</p>
 				<ul class="menu-list">
