docs: ✏️ cleaned up documentation layout

--- a/docs/_layouts/tutorial.html
+++ b/docs/_layouts/tutorial.html
@@ -1,30 +1,1 @@
-{% include header.html %}
-<div class="container">
-	<div class="is-flex is-documentation">
-		<div class="doc-aside-wrapper">
-			<aside class="doc-aside menu">
-				<p class="menu-label">Tutorial</p>
-				<ul class="menu-list">
-					{% for tut in site.data.tutorial %}
-					<li>
-						<a href="{{ tut.url | relative_url }}"{% if tut.url == page.url %}class="is-active"{% endif %}>{{ tut.title }}</a>
-						{% if tut.submenu  %}
-						<ul>
-							{% for subTut in tut.submenu %}
-							<li>
-								<a href="{{ subTut.url | relative_url }}">{{ subTut.title }}</a>
-							</li>
-							{% endfor %}
-						</ul>
-						{% endif %}
-					</li>
-					{% endfor %}
-				</ul>
-			</aside>
-		</div>
-		<div class="content">
-			{{ content }}
-		</div>
-	</div>
-</div>
-{% include footer.html %}
+{% include sidebar-layout.html menu=site.data.tutorial %}
