--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -23,7 +23,7 @@
                   <span aria-hidden="true"></span>
                 </a>
               </div>
-              <div id="menu" class="navbar-menu">
+              <div class="navbar-menu">
                 <div class="navbar-start">
                   {% for item in site.data.menu %}
                     {% include navbar-item.html text=item.text title=item.title url=item.url %}
