--- a/docs/_layouts/api.html
+++ b/docs/_layouts/api.html
@@ -1,6 +1,6 @@
 {% include header.html %}
 <div class="container">
-	<div class="is-flex is-documentation">
+	<div class="is-flex is-sidebar">
 		<div class="doc-aside-wrapper">
 			<div class="doc-aside">
 				<div class="field">
