--- a/docs/_includes/reference.html
+++ b/docs/_includes/reference.html
@@ -6,7 +6,7 @@
       </p>
     </div>
     <div class="card-image">
-      <figure class="image is-16by9">
+      <figure class="image is-padded-with-shadow is-16by9">
         <img src="{{ include.img | append: '?v=' | append: site.github.build_revision | relative_url }}" alt="{{ include.title }} Screenhot">
       </figure>
     </div>
