docs: ✏️ added missing documentation content

--- a/docs/_sass/custom-bulma.scss
+++ b/docs/_sass/custom-bulma.scss
@@ -9,8 +9,8 @@ $link: $red;
 $navbar-item-active-color: $red;
 $primary: $red;
 
-$menu-label-color: $dark !default
 $menu-item-active-background-color: $red;
+$menu-label-color: #606060 !default
 $menu-label-letter-spacing: 0.05em;
 
 $content-heading-weight: 700;
