--- a/docs/_includes/sidebar-layout.html
+++ b/docs/_includes/sidebar-layout.html
@@ -11,11 +11,18 @@
                         {% for item in curMenu.menu %}
                         <li>
                             <a href="{{ item.url | relative_url }}"{% if item.url == page.url %}class="is-active"{% endif %}>{{ item.title }}</a>
-                            {% if item.submenu  %}
+                            {% if item.submenu and item.url == page.url %}
                             <ul>
                                 {% for subItem in item.submenu %}
                                 <li>
                                     <a href="{{ subItem.url | relative_url }}">{{ subItem.title }}</a>
+                                    <ul>
+                                        {% for subSubItem in subItem.submenu %}
+                                        <li>
+                                            <a href="{{ subSubItem.url | relative_url }}">{{ subSubItem.title }}</a>
+                                        </li>
+                                        {% endfor %}
+                                    </ul>
                                 </li>
                                 {% endfor %}
                             </ul>
