--- a/docs/css/style.scss
+++ b/docs/css/style.scss
@@ -221,3 +221,12 @@ a.button,
   margin-top: 2em;
 }
 
+.doc-edit-btn {
+  float: right;
+  line-height: 1.5rem;
+  vertical-align: middle;
+
+  span {
+    font-size: 1.2rem;
+  }
+}
