docs: added devtools documentation

--- a/docs/css/style.scss
+++ b/docs/css/style.scss
@@ -230,3 +230,13 @@ a.button,
     font-size: 1.2rem;
   }
 }
+
+.doc-color-box {
+  border-radius: 2px;
+  box-shadow: 0 2px 3px 0 rgba(0,0,0,.1), inset 0 0 0 1px rgba(0,0,0,.1);
+  display: inline-block;
+  float: left;
+  height: 24px;
+  margin-right: 8px;
+  width: 24px;
+}
