--- a/docs/css/style.scss
+++ b/docs/css/style.scss
@@ -244,3 +244,11 @@ a.button,
   margin-right: 8px;
   width: 24px;
 }
+
+.content blockquote {
+  background: #f7f7f7;
+}
+
+.bottom-doc-separator {
+  height: 4px;
+}
