refactor: 💡 fixed typo in doc/styles.css

--- a/docs/_sass/custom-bulma.scss
+++ b/docs/_sass/custom-bulma.scss
@@ -10,7 +10,7 @@ $navbar-item-active-color: $red;
 $primary: $red;
 
 $menu-item-active-background-color: $red;
-$menu-label-color: #606060 !default
+$menu-label-color: #606060;
 $menu-label-letter-spacing: 0.05em;
 
 $content-heading-weight: 700;
