feat: 🎸 added IMA17 check to devtool hooks

--- a/packages/devtools/src/components/template/panel/panel.less
+++ b/packages/devtools/src/components/template/panel/panel.less
@@ -21,3 +21,17 @@
     color: var(--color-text-primary);
   }
 }
+
+.error {
+  display: flex;
+
+  margin: 0 auto;
+  margin-top: 20px;
+  height: 90vh;
+
+  justify-content: center;
+  align-items: center;
+
+  font-size: 24px;
+  font-weight: bold;
+}
