docs: ✏️ SEO Optimizations

--- a/docs/_layouts/docs.html
+++ b/docs/_layouts/docs.html
@@ -1,1 +1,1 @@
-{% include sidebar-layout.html title='Docs' menu=site.data.docs bottomNavigation=true %}
+{% include sidebar-layout.html menu=site.data.docs bottomNavigation=true %}
