--- a/docs/_partials/main.hbs
+++ b/docs/_partials/main.hbs
@@ -4,7 +4,7 @@
 category: "{{{imaMenuCategory}}}"
 {{/if~}}
 {{#if imaMenuName}}
-title: "{{{imaMenuName}}}"
+title: "Docs - {{{imaMenuName}}}"
 {{/if~}}
 {{/orphans~}}
 ---
