--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -3,8 +3,29 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>{{ site.github.repository_name }}</title>
+    <title>
+      {{ site.title }}
+      {% if page.title %}
+          | {{ page.title }}
+      {% endif %}
+    </title>
     <script src="{{ '/js/menu.js?v=' | append: site.github.build_revision | relative_url }}" async></script>
+
+    <link rel="apple-touch-icon" sizes="120x120" href="/img/icons/apple-touch-icon.png">
+    <link rel="icon" type="image/png" sizes="32x32" href="/img/icons/favicon-32x32.png">
+    <link rel="icon" type="image/png" sizes="16x16" href="/img/icons/favicon-16x16.png">
+    <link rel="manifest" href="/img/icons/site.webmanifest">
+    <link rel="mask-icon" href="/img/icons/safari-pinned-tab.svg" color="#de0304">
+    <link rel="shortcut icon" href="/img/icons/favicon.ico">
+    <meta name="msapplication-TileColor" content="#ffffff">
+    <meta name="msapplication-config" content="/img/icons/browserconfig.xml">
+    <meta name="theme-color" content="#ffffff">
+
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    
+    <meta itemprop="description" name="description" content="{% if page.description %}{{ page.description | truncate: 160 }}{% else %}{{ site.description | truncate: 160  }}{% endif %}" />
+    <meta name="robots" content="index, follow">
+
     <link rel="stylesheet" href="{{ '/css/all.min.css?v='| append: site.github.build_revision | relative_url }}">
     <link rel="stylesheet" href="{{ '/css/style.css?v=' | append: site.github.build_revision | relative_url }}">
   </head>
