--- a/docs/_partials/main.hbs
+++ b/docs/_partials/main.hbs
@@ -4,7 +4,8 @@
 category: "{{{imaMenuCategory}}}"
 {{/if~}}
 {{#if imaMenuName}}
-title: "Docs - {{{imaMenuName}}}"
+title: "API - {{{imaMenuName}}}"
+menuTitle: "{{{imaMenuName}}}"
 {{/if~}}
 {{/orphans~}}
 ---
