docs: fix opening mobile menu

--- a/docs/_includes/header.html
+++ b/docs/_includes/header.html
@@ -44,7 +44,7 @@
                   <span aria-hidden="true"></span>
                 </a>
               </div>
-              <div class="navbar-menu">
+              <div class="navbar-menu" id="menu">
                 <div class="navbar-start">
                   {% for item in site.data.menu %}
                     {% include navbar-item.html text=item.text title=item.title url=item.url %}
