style: 💄 fixde stylelint errors

--- a/packages/devtools/src/components/atom/modal/modal.less
+++ b/packages/devtools/src/components/atom/modal/modal.less
@@ -26,10 +26,10 @@
 
   cursor: pointer;
 
-  composes: animFadeIn from "../../../assets/less/animations.less";
+  composes: animfadein from "../../../assets/less/animations.less";
 
   &--closing {
-    composes: animFadeOut from "../../../assets/less/animations.less";
+    composes: animfadeout from "../../../assets/less/animations.less";
   }
 }
 
@@ -41,10 +41,10 @@
 
   box-shadow: 0 10px 25px rgba(0, 0, 0, 0.15);
 
-  composes: animSlideIn from "../../../assets/less/animations.less";
+  composes: animslidein from "../../../assets/less/animations.less";
 
   &--closing {
-    composes: animSlideOut from "../../../assets/less/animations.less";
+    composes: animslideout from "../../../assets/less/animations.less";
   }
 }
 
