--- a/packages/devtools/src/components/molecule/alerts/alerts.less
+++ b/packages/devtools/src/components/molecule/alerts/alerts.less
@@ -16,9 +16,9 @@
 
   cursor: pointer;
 
-  composes: animSlideIn from "../../../assets/less/animations.less";
+  composes: animslidein from "../../../assets/less/animations.less";
 
   &--hidden {
-    composes: animSlideOut from "../../../assets/less/animations.less";
+    composes: animslideout from "../../../assets/less/animations.less";
   }
 }
