--- a/packages/devtools/src/assets/less/config.less
+++ b/packages/devtools/src/assets/less/config.less
@@ -1,8 +1,8 @@
 :global {
   :root {
     // Fonts
-    --font-family-monospace: "SFMono-Regular", Consolas, "Liberation Mono", Menlo, Courier, monospace;
-    --font-family-sans: -apple-system, BlinkMacSystemFont, Segoe UI, Helvetica, Arial, sans-serif, Apple Color Emoji, Segoe UI Emoji, Segoe UI Symbol;
+    --font-family-monospace: "SFMono-Regular", consolas, "Liberation Mono", menlo, courier, monospace;
+    --font-family-sans: -apple-system, blinkmacsystemfont, segoe ui, helvetica, arial, sans-serif, apple color emoji, segoe ui emoji, segoe ui symbol;
 
     // Z-indexes
     --z-index-search-toolbar: 1;
