--- a/packages/devtools/src/assets/less/tooltip.less
+++ b/packages/devtools/src/assets/less/tooltip.less
@@ -18,6 +18,20 @@
 
     background: var(--oc-gray-9);
 
+    animation: fadeInDown 500ms ease-in-out;
+
     pointer-events: none;
+  }
+
+  @keyframes fadeInDown {
+    0% {
+      transform: translateY(-40px);
+      opacity: 0;
+    }
+
+    100% {
+      transform: translateY(0);
+      opacity: 1;
+    }
   }
 }
