--- a/packages/devtools/src/assets/less/config.less
+++ b/packages/devtools/src/assets/less/config.less
@@ -10,6 +10,7 @@
     --z-index-tooltip: 1;
     --z-index-menu-dropdown: 10;
     --z-index-menu-alerts: 100;
+    --z-index-modal: 99;
 
     // Colors
     --color-primary: #f1404b;
