--- a/packages/devtools/src/components/atom/modal/modal.less
+++ b/packages/devtools/src/components/atom/modal/modal.less
@@ -5,6 +5,8 @@
   left: 0;
   top: 0;
 
+  z-index: var(--z-index-modal);
+
   width: 100%;
   height: 100%;
 }
@@ -15,6 +17,8 @@
   position: fixed;
   left: 0;
   top: 0;
+
+  z-index: 2;
 
   width: 100%;
   height: 100%;
@@ -34,6 +38,10 @@
 }
 
 .modal {
+  position: relative;
+
+  z-index: 2;
+
   margin: 150px auto 0;
   padding: 20px;
 
