feat: 🎸 source-maps, global variables

--- a/packages/create-ima-app/examples/hello/assets/less/app.less
+++ b/packages/create-ima-app/examples/hello/assets/less/app.less
@@ -1,1 +1,14 @@
-// FAKE FILE FOR GULP LESS
+/**
+* Base styles – mixins, global rules and common modules rules.
+*/
+
+html,
+body,
+#page {
+  height: 100%;
+}
+
+body {
+  margin: 0;
+  padding: 0;
+}
