style: 💄 fixed stylelinter errors

--- a/packages/create-ima-app/examples/feed/component/share/view.less
+++ b/packages/create-ima-app/examples/feed/component/share/view.less
@@ -2,7 +2,7 @@
   position: relative;
 
   width: auto;
-  min-width: 0 !important;
+  min-width: 0 !important; /* stylelint-disable-line declaration-no-important */
 
   .toggle {
     cursor: pointer;
@@ -125,7 +125,7 @@
   }
 
   &.expanded {
-    color: #c00 !important;
+    color: #c00 !important; /* stylelint-disable-line declaration-no-important */
 
     .sharing-container {
       opacity: 1;
