--- a/packages/create-ima-app/examples/todos/component/item/item.less
+++ b/packages/create-ima-app/examples/todos/component/item/item.less
@@ -1,5 +1,6 @@
 .view {
   .toggle {
-    -moz-appearance: checkbox !important; // Fix for autoprefixer in Firefox.
+    // Fix for autoprefixer in Firefox.
+    -moz-appearance: checkbox !important; /* stylelint-disable-line declaration-no-important */
   }
 }
