--- a/packages/create-ima-app/examples/hello/less/globals.less
+++ b/packages/create-ima-app/examples/hello/less/globals.less
@@ -1,7 +1,9 @@
 /**
-* --------------------------------
-* @section Configuration variables
-* --------------------------------
+* Contents of this file are automatically imported to every
+* processed .less file. This means that anything defined here
+* is available globally in every other *.less file. Which makes
+* it perfect place to define custom LESS variables, mixins etc.
 */
 
 @color-red: #fc0008;
+@color-gray: #1f2937;
