--- a/packages/create-ima-app/examples/hello/page/home/homeView.less
+++ b/packages/create-ima-app/examples/hello/page/home/homeView.less
@@ -1,30 +1,46 @@
 .l-homepage {
-  display: table;
+  margin: 30px auto 0;
 
-  margin: 0 auto;
+  padding: 20px;
   max-width: 800px;
   height: 100%;
 
   text-align: center;
 
   .content {
-    display: table-cell;
-
     vertical-align: middle;
 
     img {
-      width: 100%;
+      max-width: 450px;
+      height: auto;
     }
 
     h1 {
-      margin-top: 2em;
+      margin-top: 3em;
 
-      font-size: 2em;
+      font-size: 3em;
+      font-weight: 700;
       text-align: center;
-    }
 
-    a {
-      color: @color-red;
+      a {
+        border-bottom-width: 3px;
+
+        color: @color-red;
+      }
     }
+  }
+
+  .hero {
+    margin-bottom: 2em;
+
+    font-size: 20px;
+  }
+
+  .cards {
+    display: flex;
+
+    flex-direction: row;
+    flex-wrap: wrap;
+    justify-content: center;
   }
 }
