style: 💄 Updated stylelint config

--- a/packages/create-ima-app/examples/todos/component/item/item.less
+++ b/packages/create-ima-app/examples/todos/component/item/item.less
@@ -1,5 +1,6 @@
 .view {
   .toggle {
+    /* stylelint-disable-next-line property-no-vendor-prefix */
     -moz-appearance: checkbox !important; // Fix for autoprefixer in Firefox.
   }
 }
