--- a/packages/create-ima-app/examples/feed/assets/less/reset.less
+++ b/packages/create-ima-app/examples/feed/assets/less/reset.less
@@ -17,7 +17,7 @@ body {
   border: 0;
   padding: 0;
 
-  font-family: "Helvetica-Neue", "Helvetica", Arial, sans-serif;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
   line-height: 1.5;
 }
 
