--- a/packages/devtools/src/assets/less/popup.less
+++ b/packages/devtools/src/assets/less/popup.less
@@ -62,7 +62,7 @@
 
     background: var(--color-white);
 
-    box-shadow: 0 0 5px rgba(0, 0, 0, 0.15);
+    box-shadow: 0 0 5px rgb(0 0 0 / 0.15);
   }
 
   .popup__header-title {
@@ -89,7 +89,7 @@
     width: 24px;
     height: 24px;
 
-    background: url(../../public/images/icon-alive-48.png) no-repeat center top;
+    background: url("../../public/images/icon-alive-48.png") no-repeat center top;
     background-size: 18px 18px;
   }
 
@@ -104,8 +104,6 @@
 
     position: relative;
 
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
     border-radius: 100px;
     width: 40px;
@@ -126,8 +124,6 @@
     left: 2px;
     top: 2px;
 
-    -webkit-box-sizing: border-box;
-    -moz-box-sizing: border-box;
     box-sizing: border-box;
     margin-top: 0;
     margin-left: 0;
@@ -161,11 +157,11 @@
   }
 
   .switch [disabled]:not([disabled="false"]) + .switcher:active::before {
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.2);
   }
 
   .switch [disabled]:not([disabled="false"]) + .switcher::before {
-    box-shadow: 0 1px 2px 0 rgba(0, 0, 0, 0.2);
+    box-shadow: 0 1px 2px 0 rgb(0 0 0 / 0.2);
     transition: none;
   }
 }
