--- a/packages/create-ima-app/examples/hello/less/app.less
+++ b/packages/create-ima-app/examples/hello/less/app.less
@@ -1,8 +1,8 @@
 /**
-* Base styles – mixins, global rules and common modules rules.
-*/
+ * Base styles, usually global page styles which are included in main.js
+ */
 
-* {
+ * {
   box-sizing: border-box;
 }
 
@@ -11,21 +11,27 @@ body,
 #page {
   height: 100%;
 
-  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+  font-size: 14px;
 
-  color: @color-gray;
+  @media only screen and (min-width: 680px) {
+    font-size: 16px;
+  }
 }
 
 body {
   margin: 0;
   padding: 0;
+
+  font-family: ui-sans-serif, system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, "Helvetica Neue", Arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
+
+  color: @color-dark;
 }
 
 a {
   border-bottom: 1px solid @color-red;
 
   font-weight: 700;
-  color: @color-gray;
+  color: @color-dark;
   text-decoration: none;
 
   cursor: pointer;
@@ -37,22 +43,22 @@ a {
   }
 
   &:active {
-    color: @color-gray;
+    color: @color-dark;
 
     opacity: 1;
   }
 }
 
 p {
-  font-size: 16px;
-  line-height: 1.5;
+  font-size: 1rem;
+  line-height: 1.6;
 }
 
 code {
   border-radius: 5px;
   padding: 4px;
 
-  background-color: #f3f4f6;
+  background-color: @color-light;
 }
 
 strong {
