--- a/packages/create-ima-app/examples/hello/page/error/errorView.less
+++ b/packages/create-ima-app/examples/hello/page/error/errorView.less
@@ -1,10 +1,10 @@
-.l-error {
+.page-error {
   h1 {
-    font-size: 2em;
+    font-size: 2rem;
   }
 
   .message  {
-    font-size: 1.2em;
+    font-size: 1.2rem;
     text-align: left;
   }
 }
