--- a/packages/create-ima-app/examples/hello/page/home/homeView.less
+++ b/packages/create-ima-app/examples/hello/page/home/homeView.less
@@ -1,7 +1,7 @@
-.l-homepage {
-  margin: 30px auto 0;
+.page-home {
+  margin: 2rem auto 0;
 
-  padding: 20px;
+  padding: 1.25rem;
   max-width: 800px;
   height: 100%;
 
@@ -10,17 +10,16 @@
   .content {
     vertical-align: middle;
 
-    img {
-      max-width: 450px;
-      height: auto;
-    }
-
     h1 {
-      margin-top: 3em;
+      margin-top: 1rem;
 
-      font-size: 3em;
+      font-size: 3rem;
       font-weight: 700;
       text-align: center;
+
+      @media only screen and (min-width: 680px) {
+        margin-top: 5rem;
+      }
 
       a {
         border-bottom-width: 3px;
@@ -31,9 +30,9 @@
   }
 
   .hero {
-    margin-bottom: 2em;
+    margin-bottom: 2rem;
 
-    font-size: 20px;
+    font-size: 1.25rem;
   }
 
   .cards {
