--- a/packages/server/lib/error-view/index.ejs
+++ b/packages/server/lib/error-view/index.ejs
@@ -4,7 +4,7 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="http://localhost:<%= port %>/__error-overlay-static/overlay.css">
+    <link rel="stylesheet" href="http://<%= devServerPublic %>/__error-overlay-static/overlay.css">
     <title>IMA.js - Server Error</title>
   </head>
 
@@ -13,10 +13,10 @@
     <script>
       window.__ima_server_error = <%- JSON.stringify(serverError) %>;
       window.__ima_hmr = {
-        options: <%= port %>
+        public: <%= devServerPublic %>
       };
       </script>
-    <script src="http://localhost:<%= port %>/__error-overlay-static/overlay.js"></script>
+    <script src="http://<%= devServerPublic %>/__error-overlay-static/overlay.js"></script>
     <script>
       (() => {
         function debounce(func, timeout) {
@@ -31,7 +31,7 @@
         }
 
         const debouncedReload = debounce(() => window.location.reload(), 100);
-        const evtSource = new EventSource('http://localhost:<%= port %>/__webpack_hmr');
+        const evtSource = new EventSource('http://<%= devServerPublic %>/__webpack_hmr');
 
         evtSource.addEventListener('message', () => {
           if (event.data && typeof event.data === 'string' && event.data.includes('action')) {
