--- a/packages/server/lib/error-view/index.ejs
+++ b/packages/server/lib/error-view/index.ejs
@@ -13,7 +13,9 @@
     <script>
       window.__ima_server_error = <%- JSON.stringify(serverError) %>;
       window.__ima_hmr = {
-        public: <%= devServerPublic %>
+        options: {
+          public: '<%= devServerPublic %>'
+        }
       };
       </script>
     <script src="http://<%= devServerPublic %>/__error-overlay-static/overlay.js"></script>
