chore: 🤖 Updated dependencies, lint, stylelint

--- a/packages/create-ima-app/examples/hello/page/home/homeView.less
+++ b/packages/create-ima-app/examples/hello/page/home/homeView.less
@@ -38,8 +38,7 @@
   .cards {
     display: flex;
 
-    flex-direction: row;
-    flex-wrap: wrap;
+    flex-flow: row wrap;
     justify-content: center;
   }
 }
