refactor: 💡 Renamed public to publicUrl to prevent keyword conf

--- a/packages/server/lib/error-view/index.ejs
+++ b/packages/server/lib/error-view/index.ejs
@@ -14,7 +14,7 @@
       window.__ima_server_error = <%- JSON.stringify(serverError) %>;
       window.__ima_hmr = {
         options: {
-          public: '<%= devServerPublic %>'
+          publicUrl: '<%= devServerPublic %>'
         }
       };
       </script>
