--- a/packages/error-overlay/src/components/frame/prismjs.less
+++ b/packages/error-overlay/src/components/frame/prismjs.less
@@ -1,74 +1,74 @@
-// .token.comment,
-// .token.prolog,
-// .token.doctype,
-// .token.cdata {
-//   color: theme("colors.slate.400");
-// }
+.token.comment,
+.token.prolog,
+.token.doctype,
+.token.cdata {
+  color: #94a3b8;
+}
 
-// .token.punctuation {
-//   color: theme("colors.slate.300");
-// }
+.token.punctuation {
+  color: #cbd5e1;
+}
 
-// .token.namespace {
-//   opacity: 0.7;
-// }
+.token.namespace {
+  opacity: 0.7;
+}
 
-// .token.property,
-// .token.tag,
-// .token.constant,
-// .token.symbol,
-// .token.deleted {
-//   color: theme("colors.pink.400");
-// }
+.token.property,
+.token.tag,
+.token.constant,
+.token.symbol,
+.token.deleted {
+  color: #f472b6;
+}
 
-// .token.boolean,
-// .token.number {
-//   color: theme("colors.indigo.300");
-// }
+.token.boolean,
+.token.number {
+  color: #a5b4fc;
+}
 
-// .token.selector,
-// .token.attr-name,
-// .token.string,
-// .token.char,
-// .token.builtin,
-// .token.inserted {
-//   color: theme("colors.emerald.400");
-// }
+.token.selector,
+.token.attr-name,
+.token.string,
+.token.char,
+.token.builtin,
+.token.inserted {
+  color: #34d399;
+}
 
-// .token.operator,
-// .token.entity,
-// .token.url,
-// .language-css .token.string,
-// .style .token.string,
-// .token.variable {
-//   color: theme("colors.slate.300");
-// }
+.token.operator,
+.token.entity,
+.token.url,
+.language-css .token.string,
+.style .token.string,
+.token.variable {
+  color: #cbd5e1;
+}
 
-// .token.atrule,
-// .token.attr-value,
-// .token.function,
-// .token.class-name {
-//   color: theme("colors.purple.400");
-// }
+.token.atrule,
+.token.attr-value,
+.token.function,
+.token.class-name {
+  color: #c084fc;
+}
 
-// .token.keyword {
-//   color: theme("colors.cyan.300");
-// }
+.token.keyword {
+  color: #67e8f9;
+}
 
-// .token.regex,
-// .token.important {
-//   color: theme("colors.amber.400");
-// }
+.token.regex,
+.token.important {
+  color: #fbbf24;
+}
 
-// .token.important,
-// .token.bold {
-//   font-weight: bold;
-// }
+.token.important,
+.token.bold {
+  font-weight: bold;
+}
 
-// .token.italic {
-//   font-style: italic;
-// }
+.token.italic {
+  font-style: italic;
+}
 
-// .token.entity {
-//   cursor: help;
-// }
+.token.entity {
+  cursor: help;
+}
