--- a/packages/error-overlay/src/globalStyles.less
+++ b/packages/error-overlay/src/globalStyles.less
@@ -1,3 +1,4 @@
+/* These are injected to the global dom */
 ima-error-overlay {
   /* Fonts */
   --ima-font-sans: ui-sans-serif, system-ui, -apple-system, blinkmacsystemfont, "Segoe UI", roboto, "Helvetica Neue", arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
@@ -5,7 +6,7 @@ ima-error-overlay {
 
   /* Colors */
   --ima-color-light: white;
-  --ima-color-dark: #18181b;
+  --ima-color-dark: #334155;
   --ima-color-red-base: #ef4444;
   --ima-color-yellow-base: #fcd34d;
 
