--- a/packages/error-overlay/src/styles.less
+++ b/packages/error-overlay/src/styles.less
@@ -1,5 +1,9 @@
+/* These styles are injected to the shadow dom of ima-error-overlay */
 @import "./components/overlay/overlay.less";
 @import "./components/header/header.less";
+@import "./components/runtimeError/runtimeError.less";
 @import "./components/frame/frame.less";
 @import "./components/frame/frameHeader.less";
 @import "./components/frame/prismjs.less";
+@import "./components/icon/icon.less";
+@import "./components/close/close.less";
