--- a/packages/error-overlay/src/components/frame/frameHeader.less
+++ b/packages/error-overlay/src/components/frame/frameHeader.less
@@ -3,15 +3,13 @@
 
   border-bottom: 1px solid #475569;
 
-  // padding: 16px 8px;
+  justify-content: space-between;
 
   align-items: center;
 
   font-family: var(--ima-font-mono);
 
   box-shadow: rgb(30 41 59 / 0.25) 0 8px 12px;
-
-  justify-items: center;
 
   &__ {
     &tab {
@@ -21,7 +19,7 @@
 
       border-bottom: 2px solid #06b6d4;
 
-      padding: 12px 16px;
+      padding: 10px 16px;
     }
 
     &file-info {
@@ -47,6 +45,65 @@
       color: #94a3b8;
 
       white-space: nowrap;
+    }
+
+    &actions {
+      display: flex;
+
+      margin: 0 12px;
+
+      justify-content: center;
+
+      align-items: center;
+    }
+
+    &button {
+      display: flex;
+
+      margin: 0;
+
+      margin-left: 4px;
+      border: none;
+      padding: 10px;
+
+      justify-content: center;
+      align-items: center;
+
+      color: #64748b;
+
+      background: none;
+
+      transition: all 0.15s ease-in-out;
+
+      cursor: pointer;
+
+      @keyframes pulse {
+        from { transform: scale(0.9); }
+        to { transform: scale(1.1); }
+      }
+
+      &:disabled {
+        cursor: not-allowed;
+        opacity: 0.7;
+      }
+
+      &:hover:not(&:disabled) {
+        color: #cbd5e1;
+      }
+
+      &:active:not(&:disabled) {
+        transform: scale(0.9);
+      }
+
+      &-- {
+        &green {
+          color: #10b981;
+        }
+
+        &pulse {
+          animation: pulse 0.5s infinite ease-in-out alternate;
+        }
+      }
     }
   }
 }
