refactor: 💡 Removed old source files from error-overlay

--- a/packages/error-overlay/src/components/frame/frameHeader.less
+++ b/packages/error-overlay/src/components/frame/frameHeader.less
@@ -34,6 +34,10 @@
     }
 
     &method-name {
+      display: inline-flex;
+
+      align-items: center;
+
       font-size: 14px;
       line-height: 22px;
       white-space: nowrap;
@@ -104,6 +108,12 @@
           animation: pulse 0.5s infinite ease-in-out alternate;
         }
       }
+    }
+
+    &error-icon {
+      margin-right: 4px;
+
+      color: #fb7185;
     }
   }
 }
