fix: 🐛 Multiple overlay style fixes

--- a/packages/error-overlay/src/components/frame/frame.less
+++ b/packages/error-overlay/src/components/frame/frame.less
@@ -29,7 +29,7 @@
         &highlight {
           border-color: #f43f5e;
 
-          background-color: rgb(244 63 94 / 0.2);
+          background-color: rgba(244, 63, 94, 0.2);
         }
       }
     }
