--- a/packages/error-overlay/src/components/header/header.less
+++ b/packages/error-overlay/src/components/header/header.less
@@ -16,15 +16,15 @@
 
       &-- {
         &compile {
-          color: rgb(161 98 7);
+          color: #a16207;
 
-          background-color: rgb(254 249 195);
+          background-color: #fde68a;
         }
 
         &runtime {
-          color: var(--ima-color-light);
+          color: white;
 
-          background-color: var(--ima-color-red-base);
+          background-color: #ef4444;
         }
       }
     }
@@ -36,7 +36,7 @@
       line-height: 28px;
 
       letter-spacing: -1.5px;
-      color: var(--ima-color-red-base);
+      color: #ef4444;
     }
 
     &name {
