--- a/packages/error-overlay/src/components/runtimeError/runtimeError.less
+++ b/packages/error-overlay/src/components/runtimeError/runtimeError.less
@@ -25,14 +25,14 @@
       font-size: 14px;
       line-height: 14px;
 
-      background-color: rgb(226 232 240);
+      background-color: #e2e8f0;
 
       transition: all 0.15s ease-in-out;
 
       cursor: pointer;
 
       &:hover {
-        background-color: rgb(203 213 225);
+        background-color: #cbd5e1;
       }
 
       &:active {
