--- a/packages/error-overlay/src/app.less
+++ b/packages/error-overlay/src/app.less
@@ -4,19 +4,10 @@
   --ima-font-sans: ui-sans-serif, system-ui, -apple-system, blinkmacsystemfont, "Segoe UI", roboto, "Helvetica Neue", arial, "Noto Sans", sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
   --ima-font-mono: ui-monospace, sfmono-regular, menlo, monaco, consolas, "Liberation Mono", "Courier New", monospace;
 
-  /* Colors */
-  --ima-color-light: white;
-  --ima-color-dark: #334155;
-  --ima-color-red-base: #ef4444;
-  --ima-color-yellow-base: #fcd34d;
-
-  position: absolute;
+  position: fixed;
   left: 0;
   top: 0;
   z-index: 20000000;
-
-  width: 100%;
-  height: 100%;
 
   font-family: var(--ima-font-sans);
 }
