--- a/packages/server/lib/error-view/index.ejs
+++ b/packages/server/lib/error-view/index.ejs
@@ -4,21 +4,16 @@
   <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <link rel="stylesheet" href="http://<%= devServerPublic %>/__error-overlay-static/overlay.css">
     <title>IMA.js - Server Error</title>
   </head>
 
   <body>
-    <div id="root"></div>
-    <script>
-      window.__ima_server_error = <%- JSON.stringify(serverError) %>;
-      window.__ima_hmr = {
-        options: {
-          publicUrl: '<%= devServerPublic %>'
-        }
-      };
-      </script>
-    <script src="http://<%= devServerPublic %>/__error-overlay-static/overlay.js"></script>
+    <script src="<%= devServerPublic %>/__error-overlay-static/overlay.js"></script>
+    <ima-error-overlay
+      public-url="<%= devServerPublic %>"
+      server-error="<%= JSON.stringify(serverError) %>"
+      type="compile"
+    ></ima-error-overlay>
     <script>
       (() => {
         function debounce(func, timeout) {
